# xenobot-evolution

./: .gitignore  README.md  environment.yml  install_dependencies.sh  pyproject.toml
.github/workflows/: tests.yml
configs/: baseline.yaml
data/processed/: README.md
data/raw/: README.md
notebooks/: Milestone3.ipynb  analysis.ipynb  milestone1_notebook.ipynb  milestone2_notebook.ipynb
results/: baseline_best.json  baseline_log.pkl  block_seed0_best.json  block_seed0_log.pkl  block_seed1_best.json  block_seed1_log.pkl  block_seed2_best.json  block_seed2_log.pkl  grow_shrink_seed0_best.json  grow_shrink_seed0_log.pkl  grow_shrink_seed1_best.json  grow_shrink_seed1_log.pkl  grow_shrink_seed2_best.json  grow_shrink_seed2_log.pkl  random_flip_seed0_best.json  random_flip_seed0_log.pkl  random_flip_seed1_best.json  random_flip_seed1_log.pkl  random_flip_seed2_best.json  random_flip_seed2_log.pkl  test_robot.vxa
scripts/: download_open_data.py  run_baseline.py
src/: Visualize.py  diagnostics.py  ea.py  fitness.py  multiobjective.py  representation.py  voxcraft_runner.py
src/xenobot_alife/: body.py  controller.py  env.py  evolution.py  fitness.py  render.py
src/xenobot_alife_cleanup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_body.py
